--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "bugs": {
     "url": "https://github.com/dofalami/hexlet-jest/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/dofalami/hexlet-jest#readme",
   "devDependencies": {
     "jest": "^29.3.1"
